--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,11 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters = []
+            abiFilters.addAll(ABI_FILTERS.split(';').collect{it as String})
+        }
     }
 
     buildTypes {
@@ -53,8 +58,11 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled true
             useProguard true
-
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters = []
+                abiFilters.addAll(ABI_FILTERS.split(';').collect{it as String})
+            }
         }
     }
 }
