--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
+ABI_FILTERS=armeabi;armeabi-v7a;mips;arm64-v8a;x86;x86_64
